--- a/app.json
+++ b/app.json
@@ -1,10 +1,11 @@
 {
   "expo": {
     "name": "gameplay",
-    "slug": "gameplay",
+    "slug": "gameplaygmdev",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
+    "scheme": "gameplay",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
